# NelsonEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
res/shaders/: frag.glsl
src/: Editor.h  Engine.cpp  Engine.h  Game.cpp  Game.h  Geometry.h  Gui.h  Mesh.h  MessageSystem.h  Model.h  Nelson.cpp  Nelson.h  NelsonEngine.h  Renderer.h  Scene.h  Shader.h  TextureLoader.h  Transform.h  Window.cpp  Window.h  main.cpp
